# satellite_operator_toolbox

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  example.env  pyproject.toml
data/: database.db  todos.json
models/: database.py  satellite.py  todo.py
routes/: todo_routes.py
services/: cache_service.py  celestrak_service.py  database_service.py  satellite_service.py  spacetrack_service.py  tle_input_service.py  todo_service.py
static/css/: dark-theme.css  style.css  todo-index.css  todo-task-detail.css
static/js/: todo-index.js  todo-task-detail.js
static/js/shared/: satellite_input_handler.js
templates/: 404.html  500.html  base.html  error.html  index.html  position_calculator.html  results.html  tle_viewer.html
templates/satellite_passes/: index.html  results.html
templates/satellite_position/: position_calculator.html
templates/shared/: norad_input.html  satellite_input_methods.html  tle_input.html
templates/tle/: tle_viewer.html
templates/todo/: index.html  task_detail.html
tests/: conftest.py  test_app.py
tests/services/: test_celestrak_service.py  test_satellite_service.py  test_spacetrack_service.py
utils/: formatters.py  logging_config.py  route_decorators.py
