[tool.poetry]
name = "szwecja-gs"
version = "0.1.0"
description = ""
authors = ["Patryk Niczke <p.niczke@satrev.space>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"
skyfield = "^1.53"
requests = "^2.32.3"
flask = "^3.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
