[tool.poetry]
name = "szwecja-gs"
version = "0.1.0"
description = ""
authors = ["Patryk Niczke <p.niczke@satrev.space>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"
skyfield = "^1.53"
requests = "^2.32.3"
flask = "^3.1.1"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.41"}

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    
    "F",   
    "B",    
    "I",    
    "N",    
    "UP",   
    "PL",   
    "C90",  
    "SIM",  
    "PERF", 
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "tests/*"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]

[tool.mypy]
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

enable_error_code = [
    "explicit-override",
    "ignore-without-code",
    "narrowed-type-not-subtype",
    "truthy-bool",
    "possibly-undefined",
]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
